updated the weight of the link

--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -99,7 +99,7 @@
     }
 
     a {
-        font-weight: var(--font-weight__semi-bold);
+        font-weight: var(--font-weight__bold);
         color: var(--color__white);
         text-decoration: none;
     }
